RESOLVED FIXED53355
div with webkit-transform + webkit-box-reflect disappears when switching tabs
https://bugs.webkit.org/show_bug.cgi?id=53355
Summary div with webkit-transform + webkit-box-reflect disappears when switching tabs
Ronald
Reported 2011-01-28 16:53:01 PST
If you create a div with a webkit-transform and a webkit-box-reflect, the div will disappear if you open a new tab and switch back to the original tab showing the div with the transform/reflection.
Attachments
Test case. Open in Safari. Command + T, switch back to original tab. (678 bytes, text/html)
2011-01-28 16:53 PST, Ronald
no flags
Patch (1.90 KB, patch)
2011-11-11 17:06 PST, Simon Fraser (smfr)
dino: review+
Ronald
Comment 1 2011-01-28 16:53:49 PST
Created attachment 80525 [details] Test case. Open in Safari. Command + T, switch back to original tab.
Ronald
Comment 2 2011-01-28 16:57:33 PST
Appears to not reproduce if you view the attachment on webkit.org. If you open the file as a local file on your machine or run it on a server on your machine it reproduces.
Simon Fraser (smfr)
Comment 3 2011-02-16 21:26:49 PST
Simon Fraser (smfr)
Comment 4 2011-11-11 17:04:10 PST
*** Bug 72197 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5 2011-11-11 17:06:07 PST
Simon Fraser (smfr)
Comment 6 2011-11-28 16:41:00 PST
Note You need to log in before you can comment on or make changes to this bug.