div with webkit-transform + webkit-box-reflect disappears when switching tabs https://bugs.webkit.org/show_bug.cgi?id=53355

Reviewed by Dean Jackson.

Tickle Core Animation into updating the layer's content property when
switching back to a tab which has composited reflections. This hack is
needed becuase reflections involve sharing layer contents between layers.

* platform/graphics/mac/WebLayer.mm:
(-[WebLayer actionForKey:]):

git-svn-id: svn://svn.chromium.org/blink/trunk@100214 bbb929c8-8fbe-4397-9dbb-9b2b20218538