third_party/WebKit/Source/WebCore/platform/graphics/mac/WebLayer.mm
@@ -37,6 +37,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <QuartzCore/QuartzCore.h>
 #import <wtf/UnusedParam.h>
 
+@interface CALayer(WebCoreCALayerPrivate)
+- (void)reloadValueForKeyPath:(NSString *)keyPath;
+@end
+
 using namespace WebCore;
 
 @implementation WebLayer
@@ -147,10 +151,12 @@ void setLayerNeedsDisplayInRect(CALayer *layer, WebCore::PlatformCALayerClient* 
     }
 }
 
-// Disable default animations
 - (id<CAAction>)actionForKey:(NSString *)key
 {
-    UNUSED_PARAM(key);
+    // Fix for <rdar://problem/9015675>: Force the layer content to be updated when the tree is reparented.
+    if ([key isEqualToString:@"onOrderIn"])
+        [self reloadValueForKeyPath:@"contents"];
+
     return nil;
 }
 
